# RustNations2025

./: .gitignore  0001-Update-CargoCallbacks-to-not-be-deprecated.patch
manual/: book.toml
manual/src/: SUMMARY.md  end_ffi_intro.md  welcome.md
manual/src/01-ffi-intro/: build-the-c-library.md  extern-c-gets-old-fast.md  hello-rust.md  intro.md  what-is-ffi.md
manual/src/02-ffi-intro/: c01.md  intro.md
manual/src/03-c_in_rust/: c_types.md  c_types_stdint.md  double_01.md  intro.md
manual/src/05-c_pain/: unions.md  void.md
manual/src/intro/: access-to-the-code.md  herberts-books.md  intro.md  language-wars.md  who-are-ardan-labs.md  who-is-herbert-wolverson.md
manual/theme/: header.hbs
workshops/: Cargo.toml  Dockerfile.ex01  Dockerfile.ex02  Makefile
workshops/ex02_auto_header/: build.rs
workshops/ex02_auto_header/src/: main.rs
workshops/ex03_rust_from_c/c/: build_linux.sh
workshops/ex06_porting2/src/: lib.rs
workshops/ex07_porting3/src/: lib.rs
workshops/ex08_porting4/src/: lib.rs
workshops/ex09_cstruct1/src/: lib.rs
workshops/ex10_cstruct2/src/: lib.rs
workshops/ex12_cstruct_free/src/: lib.rs
workshops/ex13_cstring1/src/: lib.rs
workshops/ex15_macros/src/: lib.rs
workshops/ex16_void/src/: lib.rs
workshops/ex17_union/src/: lib.rs
